# anagram_solver

./: .gitignore  Cargo.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs
src/components/: content_embed.rs  mod.rs  nav_overlay.rs  socials.rs
src/core/: app.rs  mod.rs  requests.rs
src/pages/: articles.rs  home.rs  mod.rs
src/store/: app_state.rs
style/: output.css
