[package]
name = "anagram-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", features = [
  "serde",
  "csr",
  "nightly"
] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", features = [
  "csr",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", features = [
  "csr",
] }
log = "0.4"
gloo-net = { version = "0.3", features = ["http", "eventsource", "json"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
futures = "0.3.28"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
web-sys = { version = "0.3.64", features = ["FormData", "HtmlImageElement"] }
gloo-worker = { version = "0.3.0", features = ["futures", "default"] }
serde-lite = "0.4.0"

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

strip = "debuginfo"
